feat: add Docker optimization, CI/CD pipelines, and dashboard UI
- Simplify Dockerfile to 2-stage build with slim image and non-root user
- Add named volume for logs, labels, and healthcheck in docker-compose
- Add GitHub Actions build pipeline (GHCR push with latest+SHA tags)
- Add GitHub Actions code quality pipeline (Biome lint + format on PRs)
- Add /health-check, /hello-world endpoints and optional /home UI
- Add PostgreSQL connection layer via Neon
- Add COMPOSE_PROJECT_NAME and CI scripts to package.json

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,19 @@
-node_modules
-dist
+node_modules/
+dist/
+logs/
+
 .env
-.git
+.env.example
+.git/
 .gitignore
+.github/
+.dockerignore
+
+docs/
 *.md
-docs
+*.log
+
+biome.json
+tsconfig.json
+lefthook.yml
+docker-compose.yml
