--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
+COMPOSE_PROJECT_NAME=devops-task-1
+
 PORT=8000
 HOST=localhost
 NODE_ENV=development
 SERVER_HELLO=Hello World
+DATABASE_URL=postgresql://user:password@host:5432/dbname?sslmode=require
