--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
 	"scripts": {
 		"dev": "bun run src/index.ts",
 		"format": "bunx biome format --write",
+		"format:check": "bunx biome format",
 		"lint": "bunx biome lint --write",
+		"lint:check": "bunx biome lint",
 		"prepare": "lefthook install"
 	},
 	"dependencies": {
@@ -11,6 +13,7 @@
 		"dotenv": "^17.2.3",
 		"express": "^4.22.1",
 		"helmet": "^8.0.0",
+		"pg": "^8.17.2",
 		"pino": "^9.6.0"
 	},
 	"devDependencies": {
@@ -19,6 +22,7 @@
 		"@types/dotenv": "^8.2.3",
 		"@types/express": "^4.17.25",
 		"@types/node": "^22.0.0",
+		"@types/pg": "^8.16.0",
 		"lefthook": "^2.0.16",
 		"typescript": "^5.9.3"
 	}
