feat: add OpenTelemetry tracing and logging middleware

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ HOST=localhost
 NODE_ENV=development
 SERVER_HELLO=Hello World
 DATABASE_URL=postgresql://user:password@host:5432/dbname?sslmode=require
+LOG_LEVEL=info
+GCP_PROJECT_ID=
