--- a/package.json
+++ b/package.json
@@ -6,14 +6,22 @@
 		"format:check": "bunx biome format",
 		"lint": "bunx biome lint --write",
 		"lint:check": "bunx biome lint",
-		"prepare": "lefthook install"
+		"prepare": "lefthook install",
+		"test": "bun test"
 	},
 	"dependencies": {
+		"@google-cloud/opentelemetry-cloud-trace-exporter": "^3.0.0",
+		"@opentelemetry/instrumentation-express": "^0.59.0",
+		"@opentelemetry/instrumentation-http": "^0.211.0",
+		"@opentelemetry/resource-detector-gcp": "^0.46.0",
+		"@opentelemetry/resources": "^2.5.0",
+		"@opentelemetry/sdk-node": "^0.211.0",
 		"cors": "^2.8.5",
 		"dotenv": "^17.2.3",
 		"express": "^4.22.1",
 		"pg": "^8.17.2",
-		"pino": "^9.6.0"
+		"pino": "^9.6.0",
+		"swagger-ui-express": "^5.0.1"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.3.13",
@@ -22,7 +30,10 @@
 		"@types/express": "^4.17.25",
 		"@types/node": "^22.0.0",
 		"@types/pg": "^8.16.0",
+		"@types/supertest": "^6.0.3",
+		"@types/swagger-ui-express": "^4.1.8",
 		"lefthook": "^2.0.16",
+		"supertest": "^7.2.2",
 		"typescript": "^5.9.3"
 	}
 }
