--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Lint
         run: bun run lint:check
 
+      - name: Format
+        run: bun run format:check
+
       - name: Test
         run: bun test
 
