--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.3.13",
+		"@types/bun": "^1.3.8",
 		"@types/cors": "^2.8.17",
 		"@types/dotenv": "^8.2.3",
 		"@types/express": "^4.17.25",
